--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,22 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
-
-# Core TTS and ML - Fixed compatibility versions
+# Core TTS and ML - Compatible versions
 transformers==4.44.2
 TTS==0.22.0
-# Use CPU-only torch build suitable for Streamlit Cloud
-torch==2.2.0+cpu
+# Compatible torch versions - use 2.1.2 for both
+torch==2.1.2+cpu
 torchaudio==2.1.2+cpu
-
 # PDF processing
 pypdf>=4.0.0
 pdf2image>=1.17.0
 pytesseract>=0.3.10
 Pillow>=9.5.0
-
 # Audio processing
 pydub>=0.25.1
 soundfile>=0.12.1
-
-# Utilities
-numpy>=1.24.0
+# Utilities - Use compatible numpy version
+numpy==1.22.0
 tqdm>=4.65.0
 streamlit>=1.36.0
-
 # Additional dependencies for XTTS compatibility
 tokenizers>=0.15.0
 librosa>=0.10.0
